fix: correct overlay button color in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,7 @@
 
 .overlay__button {
   position: absolute;
+  color: #221d1dde;
   background-color: #ffdede;
   padding: 8px 16px;
   border: 1px solid transparent;
